# hr-breaker

./: .env.example  CLAUDE.md  README.md  pyproject.toml
src/hr_breaker/: cli.py  config.py  main.py
src/hr_breaker/agents/: ai_generated_detector.py  combined_reviewer.py  hallucination_detector.py  job_parser.py  name_extractor.py  optimizer.py
